# fh-saas

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION_RULES.md  GRAPHQL_ENHANCEMENTS.md  README.md  app_host.db  clean_db_files.ps1  clean_db_files.py  db_host.html  db_host.html.md  db_tenant.html  db_tenant.html.md  fastmigrate_multi.py  faststripe_service.py  git_commit_push.ps1  index.html  index.html.md  llms-ctx.txt  llms.txt  local_ctx.py  migrations_README.md  pyproject.toml  release_publish.ps1  robots.txt  run_tests.ps1  search.json  settings.ini  sitemap.xml  stripe_webhooks.py  styles.css  utils_api.html  utils_api.html.md  utils_auth.html  utils_auth.html.md  utils_bgtsk.html  utils_bgtsk.html.md  utils_blog.html  utils_blog.html.md  utils_db.html  utils_db.html.md  (+20 more)
fh_saas/: _modidx.py  db_host.py  db_tenant.py  utils_api.py  utils_auth.py  utils_bgtsk.py  utils_blog.py  utils_db.py  utils_email.py  utils_graphql.py  utils_log.py  utils_migrate.py  utils_oauth.py  utils_polars_mapper.py  utils_seo.py  utils_sql.py  utils_stripe.py  utils_sync.py  utils_webhook.py  utils_workflow.py
migrations/: 001_create_users.sql  002_create_subscriptions.sql  003_add_user_profile.sql
nbs/: 00_db_host.ipynb  00_db_host_tests.ipynb  01_db_tenant.ipynb  01_db_tenant_tests.ipynb  02_utils_sql.ipynb  02_utils_sql_tests.ipynb  03_utils_bgtsk.ipynb  03_utils_bgtsk_tests.ipynb  04_utils_auth.ipynb  04_utils_auth_tests.ipynb  04_utils_oauth.ipynb  04_utils_oauth_tests.ipynb  05_utils_email.ipynb  05_utils_email_tests.ipynb  06_utils_log.ipynb  06_utils_log_tests.ipynb  (+26 more)
(+10 files in other folders)
