[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fh-saas"
dynamic = ["version"]
description = "Production-ready multi-tenant SaaS toolkit for FastHTML applications with authentication, billing, and integrations"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "abhishek sreesaila", email = "abhishek.sreesaila@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python', 'fasthtml', 'saas', 'multi-tenant', 'oauth', 'authentication']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['httpx>=0.25.0', 'tenacity>=8.2.0', 'polars>=0.20.0', 'Markdown>=3.4.0', 'python-frontmatter>=1.1.0', 'pygments>=2.17.0', 'fastsql', 'python-fasthtml', 'starlette', 'python-dotenv', 'sqlalchemy', 'fastcore', 'stripe', 'faststripe']

[project.urls]
Repository = "https://github.com/abhisheksreesaila/fh-saas"
Documentation = "https://abhisheksreesaila.github.io/fh-saas"

[project.entry-points.nbdev]
fh_saas = "fh_saas._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fh_saas.__version__"}

[tool.setuptools.packages.find]
include = ["fh_saas"]

[tool.nbdev]
custom_sidebar = false
